# dotnet9x

./: .gitignore  README.md
.github/workflows/: ci.yml
msil/: README.md  System.Windows.Forms.patch  System.configuration.patch  mscorlib.patch  patch.bat
patches/: Culture.dll.bdf  README.md  alink.dll.bdf  csc.exe.bdf  cscomp.dll.bdf  cvtres.exe.bdf  diasymreader.dll.bdf  fusion.dll.bdf  mscoree.dll.bdf  mscorjit.dll.bdf  mscorpe.dll.bdf  mscorwks.dll.bdf  msvcr80.dll.bdf  ngen.exe.bdf  regtlibv12.exe.bdf
setup/: README.md  dotnet95.nsi  dotnet9x.nsi  mscor95.nsi
setup/msie501/: ACTSETUP.CAB  AXA.CAB  AXA3.CAB  DXDDEX.CAB  DXMINI.CAB  FONTCORE.CAB  FONTSUP.CAB  FPESETUP.CAB  ICW.CAB  IE4MFC40.CAB  IE4SHL95.CAB  IEAK5OPT.CAB  IEJAVA.CAB  IELPKKO.CAB  IELPKTH.CAB  IELPKZHC.CAB  IELPKZHT.CAB  IENT_S3.CAB  IESETUP.INI  IEW2K_3.CAB  IE_S2.CAB  IE_S3.CAB  JAAIME.CAB  MAILNEWS.CAB  MNEWSW2K.CAB  MOBILE95.CAB  MSN_AUTH.CAB  SETUPNT.CAB  SETUPW95.CAB  SWDIR.CAB  SWFLASH.CAB  TS95.CAB  TSNT.CAB  USP10.CAB  VGX.CAB  WABW2K.CAB
setup/nsis/: COPYING  nsisconf.nsh
setup/nsis/Examples/: FileFunc.ini  FileFunc.nsi  FileFuncTest.nsi  Library.nsi  LogicLib.nsi  Memento.nsi  StrFunc.nsi  TextFunc.ini  TextFunc.nsi  TextFuncTest.nsi  UserVars.nsi  VersionInfo.nsi  WordFunc.ini  WordFunc.nsi  WordFuncTest.nsi  example1.nsi  example2.nsi  gfx.nsi  languages.nsi  (+7 more)
wrappers/: CMakeLists.txt  README.md  advapi32.c  cas.asm  cas.h  comdlg32.c  corkel32.def  cornt.def  corshlw.def  corusr.def  debug.c  debug.h  detect486.asm  detect486.c  detect486.h  kernel32.c  ntdll.c  user32.c
(+222 files in other folders)
